--- a/sass/All-Blocks/_footer.scss
+++ b/sass/All-Blocks/_footer.scss
@@ -60,3 +60,17 @@
 .about-link-blue:active {
   opacity: 0.6;
 }
+
+@media only screen and (max-width: 600px) {
+  .footer {
+    flex-direction: column;
+    // align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 40px;
+  }
+  .sitenav-footer {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
