--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -22,6 +22,20 @@ html {
   margin: 0;
   scroll-behavior: smooth;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .main {
   flex-grow: 1;
 }
