Add contact taplet

--- a/sass/All-Blocks/_contact.scss
+++ b/sass/All-Blocks/_contact.scss
@@ -70,4 +70,12 @@
       margin-left: 69px;
       max-width: 330px;
     }
+
  }
+
+  @media only screen and (max-width: 700px) {
+    .about {
+      flex-direction: column;
+    }
+  }
+
