--- a/css/main.css
+++ b/css/main.css
@@ -550,6 +550,11 @@ template {
     max-width: 330px;
   }
 }
+@media only screen and (max-width: 700px) {
+  .about {
+    flex-direction: column;
+  }
+}
 /* Site Footer  */
 .site-footer {
   background-color: #33323D;
