--- a/css/main.css
+++ b/css/main.css
@@ -620,7 +620,7 @@ template {
 @media only screen and (max-width: 600px) {
   .footer {
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     padding-top: 50px;
     padding-bottom: 40px;
   }
