--- a/sass/All-Blocks/_footer.scss
+++ b/sass/All-Blocks/_footer.scss
@@ -64,8 +64,7 @@
 @media only screen and (max-width: 600px) {
   .footer {
     flex-direction: column;
-    // align-items: center;
-    justify-content: center;
+    align-items: center;
     padding-top: 50px;
     padding-bottom: 40px;
   }
