--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -10,7 +10,7 @@ body {
 
 html {
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100%;
 }
