--- a/sass/All-Blocks/_footer.scss
+++ b/sass/All-Blocks/_footer.scss
@@ -32,7 +32,9 @@
   color: rgba(255, 255, 255, 0.541);
 }
 
-
+.footer__item a {
+  align-items: baseline;
+}
 .footer__item:not(:last-child) {
   margin-right: 16px;
 }
