--- a/sass/All-Blocks/_footer.scss
+++ b/sass/All-Blocks/_footer.scss
@@ -63,7 +63,7 @@
   opacity: 0.6;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   .footer {
     flex-direction: column;
     align-items: center;
@@ -73,6 +73,12 @@
   .sitenav-footer {
     margin-left: 0;
     margin-right: 0;
+  }
+  .footer__item:not(last-child) {
+    margin-bottom: 32px;
+  }
+  .footer__list {
+    margin-top: 40px;
   }
 
 }
